fixed input corners on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -303,6 +303,7 @@ ul {
   color: white;
   background-color: transparent;
   border: 1px solid #fff;
+  border-radius: 0px;
   margin: 10px;
   padding: 10px 20px;
   position: center;
